# ar-towerdefense

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: command.h  common.h  entities.h  entity.h  event.h  event_bus.h  event_bus.hpp  events.h  extern.h  game.h  scene.h  spawner.hpp  tower.h  ui.h  unit.h
lib/detection/: CMakeLists.txt
lib/detection/include/: cam.h  delaunator.hpp  image_processor.h  mesh.h  path_detector.h  path_finder.h  paths_initializer.h
lib/detection/src/: CMakeLists.txt  Mesh.cpp  PathDetector.cpp  cam.cpp  image_processor.cpp  main.cpp  main2.cpp  mesh.cpp  path_detector.cpp  path_finder.cpp  paths_initializer.cpp
lib/detection/test/: CMakeLists.txt  test1.cpp  test_cam.cpp  test_image_processor.cpp
lib/renderer/: CMakeLists.txt
lib/renderer/include/: renderer.h
lib/renderer/src/: renderer.cpp
src/: AbsolutePath.cpp  BasicTutorial1.cpp  CMakeLists.txt  Plane.txt  absolute_path.cpp  event.cpp  event_bus.cpp  game.cpp  main.cpp  marker_detection.cpp  player.cpp  scene.cpp  spawner.cpp  tower.cpp  ui.cpp  unit.cpp
test/: CMakeLists.txt  test_event.cpp  test_game.cpp  test_unit.cpp
